tests/NormalTests/paczka1/fuzzy1/63806456.err
Error in line 1: S281 A667 42,7
Error in line 5: GiG28X S550 96,4
Error in line 12: um3fYo7 S550 41,1
Error in line 6: GiG28X S617 96,7
Error in line 23: um3fYo7 S281 22,9
